# docs/web/api/openapi.yaml
@@ -173,53 +173,6 @@ paths:
       summary: Update my profile
       tags:
       - Profiles
-  /profiles-svc/v1/profiles/me/username:
-    patch:
-      description: |
-        Updates profile `username` by profile id. Returns 409 if the username is already taken.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UpdateProfileUsername"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Profile"
-          description: Username updated.
-        "400":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Errors"
-          description: Bad request (validation error / username is not allowed / invalid
-            payload).
-        "404":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Errors"
-          description: Profile for user does not exist.
-        "409":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Errors"
-          description: Conflict (username is already taken).
-        "500":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Errors"
-          description: Internal server error.
-      security:
-      - bearerAuth: []
-      summary: Update profile username
-      tags:
-      - Profiles
   /profiles-svc/v1/profiles/{account_id}:
     get:
       description: |
@@ -325,7 +278,6 @@ components:
         data:
           attributes:
             description: description
-            avatar: https://openapi-generator.tech
             pseudonym: pseudonym
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           type: update_profile
@@ -346,18 +298,6 @@ components:
           $ref: "#/components/schemas/UpdateProfileOfficial_data"
       required:
       - data
-    UpdateProfileUsername:
-      example:
-        data:
-          attributes:
-            username: username
-          id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
-          type: update_profile_username
-      properties:
-        data:
-          $ref: "#/components/schemas/UpdateProfileUsername_data"
-      required:
-      - data
     Profile:
       example:
         data:
@@ -366,7 +306,6 @@ components:
             description: description
             official: true
             created_at: 2000-01-23T04:56:07.000+00:00
-            avatar: https://openapi-generator.tech
             pseudonym: pseudonym
             username: username
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
@@ -383,7 +322,6 @@ components:
           description: description
           official: true
           created_at: 2000-01-23T04:56:07.000+00:00
-          avatar: https://openapi-generator.tech
           pseudonym: pseudonym
           username: username
         id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
@@ -409,7 +347,6 @@ components:
         description: description
         official: true
         created_at: 2000-01-23T04:56:07.000+00:00
-        avatar: https://openapi-generator.tech
         pseudonym: pseudonym
         username: username
       properties:
@@ -421,10 +358,6 @@ components:
           type: string
         description:
           description: Description
-          type: string
-        avatar:
-          description: Avatar URL
-          format: uri
           type: string
         official:
           description: Is Official Account
@@ -450,7 +383,6 @@ components:
             description: description
             official: true
             created_at: 2000-01-23T04:56:07.000+00:00
-            avatar: https://openapi-generator.tech
             pseudonym: pseudonym
             username: username
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
@@ -460,7 +392,6 @@ components:
             description: description
             official: true
             created_at: 2000-01-23T04:56:07.000+00:00
-            avatar: https://openapi-generator.tech
             pseudonym: pseudonym
             username: username
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
@@ -532,10 +463,6 @@ components:
         description:
           description: Description
           type: string
-        avatar:
-          description: Avatar URL
-          format: uri
-          type: string
       required:
       - username
     CreateProfile_data:
@@ -557,7 +484,6 @@ components:
     UpdateProfile_data_attributes:
       example:
         description: description
-        avatar: https://openapi-generator.tech
         pseudonym: pseudonym
       properties:
         pseudonym:
@@ -566,15 +492,10 @@ components:
         description:
           description: Description
           type: string
-        avatar:
-          description: Avatar URL
-          format: uri
-          type: string
     UpdateProfile_data:
       example:
         attributes:
           description: description
-          avatar: https://openapi-generator.tech
           pseudonym: pseudonym
         id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         type: update_profile
@@ -619,36 +540,6 @@ components:
           type: string
         attributes:
           $ref: "#/components/schemas/UpdateProfileOfficial_data_attributes"
-      required:
-      - attributes
-      - id
-      - type
-    UpdateProfileUsername_data_attributes:
-      example:
-        username: username
-      properties:
-        username:
-          description: username
-          type: string
-      required:
-      - username
-    UpdateProfileUsername_data:
-      example:
-        attributes:
-          username: username
-        id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
-        type: update_profile_username
-      properties:
-        id:
-          description: account id
-          format: uuid
-          type: string
-        type:
-          enum:
-          - update_profile_username
-          type: string
-        attributes:
-          $ref: "#/components/schemas/UpdateProfileUsername_data_attributes"
       required:
       - attributes
       - id
