# resources/model_update_profile_username_data.go
@@ -1,216 +1,0 @@
-/*
-NetBill profile service
-
-profile-svc docs
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"github.com/google/uuid"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateProfileUsernameData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateProfileUsernameData{}
-
-// UpdateProfileUsernameData struct for UpdateProfileUsernameData
-type UpdateProfileUsernameData struct {
-	// account id
-	Id uuid.UUID `json:"id"`
-	Type string `json:"type"`
-	Attributes UpdateProfileUsernameDataAttributes `json:"attributes"`
-}
-
-type _UpdateProfileUsernameData UpdateProfileUsernameData
-
-// NewUpdateProfileUsernameData instantiates a new UpdateProfileUsernameData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateProfileUsernameData(id uuid.UUID, type_ string, attributes UpdateProfileUsernameDataAttributes) *UpdateProfileUsernameData {
-	this := UpdateProfileUsernameData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewUpdateProfileUsernameDataWithDefaults instantiates a new UpdateProfileUsernameData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateProfileUsernameDataWithDefaults() *UpdateProfileUsernameData {
-	this := UpdateProfileUsernameData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *UpdateProfileUsernameData) GetId() uuid.UUID {
-	if o == nil {
-		var ret uuid.UUID
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *UpdateProfileUsernameData) GetIdOk() (*uuid.UUID, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *UpdateProfileUsernameData) SetId(v uuid.UUID) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *UpdateProfileUsernameData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *UpdateProfileUsernameData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *UpdateProfileUsernameData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *UpdateProfileUsernameData) GetAttributes() UpdateProfileUsernameDataAttributes {
-	if o == nil {
-		var ret UpdateProfileUsernameDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *UpdateProfileUsernameData) GetAttributesOk() (*UpdateProfileUsernameDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *UpdateProfileUsernameData) SetAttributes(v UpdateProfileUsernameDataAttributes) {
-	o.Attributes = v
-}
-
-func (o UpdateProfileUsernameData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateProfileUsernameData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *UpdateProfileUsernameData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateProfileUsernameData := _UpdateProfileUsernameData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateProfileUsernameData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateProfileUsernameData(varUpdateProfileUsernameData)
-
-	return err
-}
-
-type NullableUpdateProfileUsernameData struct {
-	value *UpdateProfileUsernameData
-	isSet bool
-}
-
-func (v NullableUpdateProfileUsernameData) Get() *UpdateProfileUsernameData {
-	return v.value
-}
-
-func (v *NullableUpdateProfileUsernameData) Set(val *UpdateProfileUsernameData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateProfileUsernameData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateProfileUsernameData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateProfileUsernameData(val *UpdateProfileUsernameData) *NullableUpdateProfileUsernameData {
-	return &NullableUpdateProfileUsernameData{value: val, isSet: true}
-}
-
-func (v NullableUpdateProfileUsernameData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateProfileUsernameData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
