# resources/model_update_profile_username_data_attributes.go
@@ -1,159 +1,0 @@
-/*
-NetBill profile service
-
-profile-svc docs
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateProfileUsernameDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateProfileUsernameDataAttributes{}
-
-// UpdateProfileUsernameDataAttributes struct for UpdateProfileUsernameDataAttributes
-type UpdateProfileUsernameDataAttributes struct {
-	// username
-	Username string `json:"username"`
-}
-
-type _UpdateProfileUsernameDataAttributes UpdateProfileUsernameDataAttributes
-
-// NewUpdateProfileUsernameDataAttributes instantiates a new UpdateProfileUsernameDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateProfileUsernameDataAttributes(username string) *UpdateProfileUsernameDataAttributes {
-	this := UpdateProfileUsernameDataAttributes{}
-	this.Username = username
-	return &this
-}
-
-// NewUpdateProfileUsernameDataAttributesWithDefaults instantiates a new UpdateProfileUsernameDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateProfileUsernameDataAttributesWithDefaults() *UpdateProfileUsernameDataAttributes {
-	this := UpdateProfileUsernameDataAttributes{}
-	return &this
-}
-
-// GetUsername returns the Username field value
-func (o *UpdateProfileUsernameDataAttributes) GetUsername() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Username
-}
-
-// GetUsernameOk returns a tuple with the Username field value
-// and a boolean to check if the value has been set.
-func (o *UpdateProfileUsernameDataAttributes) GetUsernameOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Username, true
-}
-
-// SetUsername sets field value
-func (o *UpdateProfileUsernameDataAttributes) SetUsername(v string) {
-	o.Username = v
-}
-
-func (o UpdateProfileUsernameDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateProfileUsernameDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["username"] = o.Username
-	return toSerialize, nil
-}
-
-func (o *UpdateProfileUsernameDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"username",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateProfileUsernameDataAttributes := _UpdateProfileUsernameDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateProfileUsernameDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateProfileUsernameDataAttributes(varUpdateProfileUsernameDataAttributes)
-
-	return err
-}
-
-type NullableUpdateProfileUsernameDataAttributes struct {
-	value *UpdateProfileUsernameDataAttributes
-	isSet bool
-}
-
-func (v NullableUpdateProfileUsernameDataAttributes) Get() *UpdateProfileUsernameDataAttributes {
-	return v.value
-}
-
-func (v *NullableUpdateProfileUsernameDataAttributes) Set(val *UpdateProfileUsernameDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateProfileUsernameDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateProfileUsernameDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateProfileUsernameDataAttributes(val *UpdateProfileUsernameDataAttributes) *NullableUpdateProfileUsernameDataAttributes {
-	return &NullableUpdateProfileUsernameDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableUpdateProfileUsernameDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateProfileUsernameDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
